--- a/fields.mdx
+++ b/fields.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Fields"
 description: "To implement Dromo in your application, you must first define a schema. A schema is an array of field objects. These fields will be matched to columns during the import process, and define the properties of the JSON payload passed back in the results."
+icon: "text"
 ---
 
 ## Basics[​](#basics "Direct link to Basics")
