--- a/reference/react-dromo-uploader.mdx
+++ b/reference/react-dromo-uploader.mdx
@@ -1,5 +1,5 @@
 ---
-title: "<DromoUploader /> Component Props"
+title: "<DromoUploader> Component Props"
 description: "Reference for props accepted by the DromoUploader React component."
 ---
 
