--- a/users.mdx
+++ b/users.mdx
@@ -1,5 +1,5 @@
 ---
-title: "The user object"
+title: "The User Object"
 description: "You may supply metadata about your end user at the time they make an upload with the  object."
 ---
 
